c_constants/c_constants.h

#ifndef C_CONSTANTS_H_
#define C_CONSTANTS_H_

extern double PI;
extern double RAD_TO_DEG;
extern double DEG_TO_RAD;
extern double RADIAN;
extern double RADIUS;
extern double OMEGA;
extern double GRAV;
extern double SECONDS_PER_DAY;
extern double SECONDS_PER_HOUR;
extern double SECONDS_PER_MINUTE;
extern double RADGAS;
extern double RVGAS;
extern double HLV;
extern double HLS;
extern double KAPPA;
extern double CP_AIR;
extern double CP_VAPOR;
extern double CP_OCEAN;
extern double DENS_H20;
extern double RHOAIR;
extern double RHO0;
extern double RHO0R;
extern double RHO_CP;
extern double O2MIXRAT;
extern double WTMAIR;
extern double WTMH2O;
extern double WTMOZONE;
extern double WTMC;
extern double WTMCO2;
extern double WTMCH4;
extern double WTMO2;
extern double WTMCFC11;
extern double WTMCFC12;
extern double WTMN;
extern double DIFFAC;
extern double ES0;
extern double PSTD;
extern double PSTD_MKS;
extern double KELVIN;
extern double TFREEZE;
extern double C2DBARS;
extern double STEFAN;
extern double AVOGNO;
extern double VONKARM;
extern double ALOGMIN;
extern double EPSLN;
extern double RADCON;
extern double RADCON_MKS;

#endif